<resources>
    <string name="app_name">Elder Music For Artist</string>
    <string name="title_home">Home</string>
    <string name="title_Library">Library</string>
    <string name="title_upload">Upload</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_account">Account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="or_sign_in_with">or sign in with:</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E Mail</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="show_all">Show All</string>
    <string name="loading">Loading</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="singles">Singles</string>
    <string name="click_to_create_albums_musics_playlists_etc">Click to Create Album, Music, Playlist etc</string>
    <string name="developed_by">Developed By:</string>
    <string name="add_">add</string>
    <string name="music">Music</string>
    <string name="album">Album</string>
    <string name="r_b"><![CDATA[R & B]]></string>
    <string name="add_genre">add genre</string>
    <string name="save_draft">Save Draft</string>
    <string name="select_artistes">Select Featured Artistes</string>
    <string name="select_genres">Select Genres</string>
    <string name="genre">Genre</string>
    <string name="search_artists">Search Artists</string>
    <string name="featured_artists">Featured Artists:</string>
    <string name="select_album_cover">Album Cover</string>
    <string name="about_short_detail">About (short detail)</string>
    <string name="album_title">Album Title</string>
    <string name="add_song">Add Song</string>
    <string name="unknown">Unknown</string>
    <string name="elder_music">Elder Music</string>
    <string name="powered_by">powered by:</string>
    <string name="add">Add</string>
    <string name="upload_now">Upload Now</string>
    <string name="publish">Publish</string>
    <string name="add_audio_file">Add Audio File</string>
    <string name="title">Title</string>
    <string name="_0">(0)</string>
    <string name="featured_artistes">Featured Artistes</string>
    <string name="cover_image">Cover Image</string>
    <string name="audio_file">Audio File</string>
    <string name="unpublished">Unpublished</string>
    <string name="invalid_email">Invalid EMail</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="password_not_match">does not match</string>
</resources>