<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/allID"
    tools:context=".ui.AddPage.AddAlbumFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/homeScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_view_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/coverImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/albumCoverBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:elevation="0dp"
                    android:focusable="true"
                    android:translationZ="0dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_margin="16dp"
                        android:text="@string/select_album_cover"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="12sp" />

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/scrollViewLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin8">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/titleTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/album_title" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin8">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/aboutTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/about_short_detail" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- start Genre select -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin8"
                    android:paddingEnd="36dp">

                    <TextView
                        android:id="@+id/titleTV1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/arial_rounded_extra_bold"
                        android:text="Genre"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/genreSubTitleTV1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin8"
                        android:layout_toEndOf="@id/titleTV1"
                        android:gravity="center_vertical"
                        android:text="@string/_0"
                        android:textSize="12sp" />

                </RelativeLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/genreChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin8" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/margin8"
                    android:layout_marginBottom="@dimen/margin8"
                    android:text="@string/add_genre"
                    app:icon="@drawable/ic_baseline_add_24" />

                <!-- end Genre select -->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/margin8"
                    android:background="?attr/colorControlNormal" />

                <RelativeLayout
                    android:id="@+id/da"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin8"
                    android:paddingEnd="36dp">

                    <TextView
                        android:id="@+id/songsTitleTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/arial_rounded_extra_bold"
                        android:text="Songs"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/songsSubTitleTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin8"
                        android:layout_toEndOf="@id/songsTitleTV"
                        android:gravity="center_vertical"
                        android:text="(0)"
                        android:textSize="12sp" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="LinearLayoutManager"
                    tools:itemCount="1"
                    tools:listitem="@layout/album_music_item_view_3" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addMusicBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="@dimen/margin8"
                        android:layout_marginBottom="@dimen/margin8"
                        android:text="@string/add_song"
                        app:icon="@drawable/ic_add_24px" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/saveDraftBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="@dimen/margin8"
                        android:layout_marginBottom="@dimen/margin8"
                        android:text="Save Draft"
                        app:icon="@drawable/ic_baseline_save_24" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>